Fixing scroll css overflow + scrollbar custom +fade in fixed

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -29,7 +29,7 @@
   display: flex;
   flex-direction: column;
   z-index: 30;
-  max-width: 100vw;
+  width: 100vw;
 }
 .main {
   max-width: calc(100vw - (24px * 2)); /*Moblie */
