--- a/src/keyframe/keyframe.css
+++ b/src/keyframe/keyframe.css
@@ -44,11 +44,9 @@
 @keyframes fade-in {
   /* Fade in  */
   0% {
-    transform: translateZ(-80px);
     opacity: 0;
   }
   100% {
-    transform: translateZ(0);
     opacity: 1;
   }
 }
